# ruuid

./: Cargo.toml  LICENSE  README.md  build.rs
src/: cli.rs  handle_command.rs  main.rs  ulid.rs  uuid.rs
