[package]
name = "ruuid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
rand = "0.8.5"
uuid = { version = "1.3.0", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8", "std", "rng", "rand"] }
