[package]
name = "ruuid"
version = "0.1.3"
edition = "2021"
authors = ["Nagy Botond benjiwonton@gmail.com"]
description = "Cli tool to generate UUIDs"
license-file = "LICENSE"
repository = "https://github.com/westernwontons/ruuid"
keywords = ["cli", "uuid"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
rand = "0.8.5"
uuid = { version = "1.3.0", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8", "std", "rng", "rand"] }
